<resources>
    <string name="app_name">地铁智能终端</string>
    <!-- Strings related to login -->
    <string name="prompt_name">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="invalid_username">请输入有效的用户名</string>
    <string name="invalid_password">请输入有效的密码</string>
    <string name="login_failed">"登录失败"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to task push -->
    <string name="prompt_task_description">任务信息</string>
    <string name="prompt_task_name">任务名称</string>
    <string name="example_task_name">示例任务名称</string>
    <string name="example_task_description">任务目标是对轨道进行检查，确保其处于完好状态。巡检员需要携带必要的工具和设备，并在规定时间内完成任务。应尽量避免碰撞和其他危险情况。</string>
    <string name="action_submit_task">提交任务</string>
    <string name="prompt_task_image">任务图片</string>
</resources>